<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#0C0C0C"
        android:backgroundTint="#000000">
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:paddingLeft="20dp"
            android:id="@+id/username_edittext_register"
            android:background="@drawable/rounded_edittext_register_login"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/o_seu_nome" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/conta_criar_text_view"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:paddingLeft="20dp"
            android:id="@+id/email_edittext_register"
            android:background="@drawable/rounded_edittext_register_login"
            app:layout_constraintTop_toBottomOf="@+id/username_edittext_register"
            android:hint="@string/o_seu_e_mail"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/username_edittext_register"
            app:layout_constraintEnd_toEndOf="@+id/username_edittext_register"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:paddingLeft="20dp"
            android:id="@+id/password_edittext_register"
            android:background="@drawable/rounded_edittext_register_login"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/email_edittext_register"
            android:hint="@string/a_sua_senha"
            app:layout_constraintEnd_toEndOf="@+id/email_edittext_register"
            app:layout_constraintStart_toStartOf="@+id/email_edittext_register"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/feito_crie_uma_conta_para_mim"
            android:layout_width="0dp"
            android:layout_height="70sp"
            android:background="@drawable/shape_corners_70sp"
            android:id="@+id/register_button_register"
            app:layout_constraintEnd_toEndOf="@+id/password_edittext_register"
            app:layout_constraintStart_toStartOf="@+id/password_edittext_register"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext_register" android:layout_marginTop="16dp"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/j_tem_uma_conta_clique_aqui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:id="@+id/already_have_account_text_view"
            app:layout_constraintStart_toStartOf="@+id/register_button_register"
            app:layout_constraintTop_toBottomOf="@+id/register_button_register"
            app:layout_constraintEnd_toEndOf="@+id/register_button_register" android:textColor="#FFFFFF"
            android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/quero_criar_uma_conta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/conta_criar_text_view"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/titulo_text_view" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/astros_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titulo_text_view" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="#FFFFFF" android:textStyle="bold"
            android:textSize="45sp" app:layout_constraintHorizontal_bias="0.555"/>
</android.support.constraint.ConstraintLayout>